--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
-        run: npm run lint
-
       - name: Build static export
         env:
           NEXT_PUBLIC_WEATHER_API_KEY: ${{ secrets.NEXT_PUBLIC_WEATHER_API_KEY }}
@@ -40,16 +37,4 @@ jobs:
           NEXT_PUBLIC_WEATHER_BASE_URL: ${{ secrets.NEXT_PUBLIC_WEATHER_BASE_URL }}
           NEXT_PUBLIC_GEOAPIFY_API_KEY: ${{ secrets.NEXT_PUBLIC_GEOAPIFY_API_KEY }}
           NEXT_PUBLIC_GEOAPIFY_BASE_URL: ${{ secrets.NEXT_PUBLIC_GEOAPIFY_BASE_URL }}
-        run: |
-          echo "Testing Weather API..."
-          curl -f "${NEXT_PUBLIC_WEATHER_BASE_URL}/current.json?key=${NEXT_PUBLIC_WEATHER_API_KEY}&q=Vancouver" || echo "Weather API test failed"
-          
-          echo "Testing Geoapify API..."
-          curl -f "${NEXT_PUBLIC_GEOAPIFY_BASE_URL}/geocode/search?text=Vancouver&apiKey=${NEXT_PUBLIC_GEOAPIFY_API_KEY}" || echo "Geoapify API test failed"
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: static-export
-          path: out/
-          retention-days: 7
+        run: npm test
