--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run custom API tests
+        env:
+          NEXT_PUBLIC_WEATHER_API_KEY: ${{ secrets.NEXT_PUBLIC_WEATHER_API_KEY }}
+          NEXT_PUBLIC_WEATHER_BASE_URL: ${{ secrets.NEXT_PUBLIC_WEATHER_BASE_URL }}
+          NEXT_PUBLIC_GEOAPIFY_API_KEY: ${{ secrets.NEXT_PUBLIC_GEOAPIFY_API_KEY }}
+          NEXT_PUBLIC_GEOAPIFY_BASE_URL: ${{ secrets.NEXT_PUBLIC_GEOAPIFY_BASE_URL }}
+        run: node src/app/activities/page.test.js
+
       - name: Build static export
         env:
           NEXT_PUBLIC_WEATHER_API_KEY: ${{ secrets.NEXT_PUBLIC_WEATHER_API_KEY }}
